--- a/Home/Home.html
+++ b/Home/Home.html
@@ -13,7 +13,21 @@
 
 <body>
 
-    <h1>Startech</h1>
+    <!-- navbar -->
+    <header>
+
+    </header>
+
+
+    <main class="container-fluid">
+
+
+
+    </main>
+
+    <footer>
+
+    </footer>
 
 
 
