--- a/Home/Home.html
+++ b/Home/Home.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./Home.css">
@@ -14,13 +19,136 @@
 <body>
 
     <!-- navbar -->
-    <header>
+    <header class="conteiner bg-dark justify-content-end col-sm-12 " id="navdesign">
+
+        <div class="container" class="navbar navbar-light bg-dark">
+            <a class="navbar-brand" href="#">
+                <img src="./assets/logo/logo.png" alt="" width="100px" height="60px">
+            </a>
+        </div>
+        <div class="container-fluid" class="navbar navbar-light bg-dark ">
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+
+        <!-- <div class="container bg-warning d-flex"  class="navbar navber-light   " width="80px" height="50px">
+                <i class="fa fa-mobile" aria-hidden="true"></i><br>
+                <h5>offers</h5> 
+               <p>new offers</p>
+            </div> -->
+
+        <div class="container" class="navbar navbar-light bg-dark justify-content-end">
+            <button type="button" class="btn btn-primary btn-md" id="button1">PC Builder</button>
+        </div>
+        <br>
+
 
     </header>
+    <!-- <nav class="container d-flex bg-light col-sm-12">
+        <ul class="nav nav-pills a-center">
+
+            <li class="nav-item dropdown d-flex col-sm-3">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                    aria-expanded="false">Desktop</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item active" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Separated link</a></li>
+                </ul>
+                <ul class="nav nav-pills">
+
+                    <li class="nav-item dropdown d-flex col-sm-3">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            aria-expanded="false">laptop</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item active" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Separated link</a></li>
+                        </ul>
+                        <ul class="nav nav-pills">
+
+                            <li class="nav-item dropdown d-flex col-sm-3">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-expanded="false">component</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item active" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Separated link</a></li>
+                                </ul>
+                                <ul class="nav nav-pills">
+
+                                    <li class="nav-item dropdown d-flex col-sm-3">
+                                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
+                                            role="button" aria-expanded="false">Office Requpments</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item active" href="#">Action</a></li>
+                                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                            <li>
+                                                <hr class="dropdown-divider">
+                                            </li>
+                                            <li><a class="dropdown-item" href="#">Separated link</a></li>
+                                        </ul>
+                                        <ul class="nav nav-pills">
+    </nav> -->
+
+    <main class="container">
+
+        <div class="row my-3">
+            <!-- carousel-->
+
+            <div id="carouselExampleIndicators" class="carousel slide col-8" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/carousel/2.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/carousel/1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/carousel/free-home-delivery-.jpg" class="d-block w-100" alt="...">
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- img -->
+            <div class=" col-4">
+                <div class="">
+                    <div class="">
+                        <img style="height: 100%; width: 100%;" src="./assets/carousel/earbuds-ad.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
-    <main class="container-fluid">
-
+        <div class=" bg-warning" style="border-block:5px;">
+            <marquee behavior="marquee" direction="left"> marquee 28th March Monday, our all branch as well as
+                online activities are open and operational.</marquee>
+        </div>
 
 
     </main>
